tests/paczka1/fuzzy1/10124653.err
Error in line 3: SBzHm A752 75,2
Error in line 21: japm S293 37,7
Error in line 25: S837 S837 48,5
